# rust-icu4x-test

./: Cargo.toml  README.md  greek_collation_blob.postcard
.github/workflows/: rust.yml
src/: lib.rs
