[package]
name = "icu4x-unicode-tests"
version = "0.1.0"
edition = "2024"

[dependencies]
icu = { version = "2.1.1", features = ["serde"] }
icu_provider_blob = "2.1.1"
icu_collator = "2.1.1"

[profile.release]
# these options bring the size of librust_icu4x_test.rlib down to 708K
# of which greek_collation_blob.postcard is 600K
opt-level = "s"  # Optimize for smallest size ("s" is also an option; experiment)
strip = "symbols" # Automatically strip debug symbols from the binary
# lto = true #this makes it bigger!      # Enable Link-Time Optimization, which removes dead code
codegen-units = 1 # Reduces parallel compilation to enable better cross-module optimization
panic = "abort"  # Abort on panic instead of unwinding the stack, saving unwinding code
